# midi-io

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci.yml  macos.yml  pages.yml
examples/: codec.rs  list_ports.rs  loopback.rs  monitor_ports.rs  receive.rs  send.rs  virtual_destination.rs  web_synth.rs
examples/web_synth_app/: Cargo.toml  index.html
examples/web_synth_app/src/: lib.rs
scripts/: ios-sim-runner.sh  test-container.Dockerfile  test-container.sh  test-ios.sh  verify.sh
scripts/kernel/: Dockerfile  build-in-container.sh  build-kernel.sh
scripts/kernel/fragments/: alsa-seq.conf
src/: client.rs  connection.rs  error.rs  lib.rs  name.rs  port.rs  time.rs
src/midi/: channel.rs  codec_error.rs  conformance.rs  data_byte.rs  decode.rs  message.rs  mod.rs  parse_error.rs  pitch_bend.rs  raw_message.rs  song_position.rs  stream_parser.rs  sys_ex.rs  sys_ex_error.rs  value_error.rs
src/platform/: alsa.rs  common.rs  coremidi.rs  mod.rs  web.rs
tests/: connect_e2e.rs  hotplug_e2e.rs
