[package]
name = "web_synth_app"
version = "0.0.0"
edition = "2021"
publish = false

[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
midi-io = { path = "../..", features = ["io"] }
wasm-bindgen = "=0.2.126"
wasm-bindgen-futures = "0.4"
futures-util = "0.3"
console_error_panic_hook = "0.1"
web-sys = { version = "0.3", features = [
  "Document",
  "Element",
  "HtmlElement",
  "Window",
  "AudioContext",
  "AudioDestinationNode",
  "AudioNode",
  "AudioParam",
  "GainNode",
  "OscillatorNode",
  "OscillatorType",
] }
